--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "lucide": "^0.469.0",
     "markdown-to-jsx": "^7.7.2",
     "react": "^19.0.0",
+    "react-content-loader": "^7.0.2",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.15.0",
     "styled-components": "^6.1.13",
     "xlsx": "^0.18.5"
