--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "dotenv": "^16.4.7",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "lucide": "^0.469.0",
     "markdown-to-jsx": "^7.7.2",
     "react": "^19.0.0",
@@ -20,6 +22,7 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
+    "react-to-print": "^3.1.1",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.0",
     "styled-components": "^6.1.13",
